syntax = "proto3";

package go.micro.srv.block;

service Block {
	//IPFS
	rpc UploadIpfsContent(Request) returns (Response) {}
	rpc UploadIpfsURL(Request) returns (Response) {}
	//BlockChain
	rpc UploadBlockData(Request) returns (Response) {}
	rpc GetBlockInfoByTxid(Request) returns (Response) {}
}


message Request {
	string content = 1;
	string ipfsUrl = 2;
	string txid = 3;
}

message Response {
	string msg = 1;
	string data = 2;
	string txid = 3;
}
